{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 53,
  "lineage": "3fe9ea8c-8900-f08b-95e9-76881bf15297",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f7868d07968484b",
            "association_id": "eipassoc-0e4824d5c56adfaaf",
            "domain": "vpc",
            "id": "eipalloc-02f7868d07968484b",
            "instance": "i-00fdbf2c69b10937f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b12f52b37a7bcaeb",
            "private_dns": "ip-10-0-0-70.ec2.internal",
            "private_ip": "10.0.0.70",
            "public_dns": "ec2-34-226-6-29.compute-1.amazonaws.com",
            "public_ip": "34.226.6.29",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform_IPaddress"
            },
            "tags_all": {
              "Name": "terraform_IPaddress"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.terraform_ec2",
            "aws_internet_gateway.Terrafrom_IGW",
            "aws_security_group.terraform_sg",
            "aws_subnet.SubnetA",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terrafrom_eip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0200bdf347d707298",
            "association_id": "eipassoc-00f24811b64d5ec8f",
            "domain": "vpc",
            "id": "eipalloc-0200bdf347d707298",
            "instance": "i-0deb68caa7fee3a95",
            "network_border_group": "us-east-1",
            "network_interface": "eni-011cef548a278c7f0",
            "private_dns": "ip-10-0-0-175.ec2.internal",
            "private_ip": "10.0.0.175",
            "public_dns": "ec2-34-231-99-103.compute-1.amazonaws.com",
            "public_ip": "34.231.99.103",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Terraform2_EIP"
            },
            "tags_all": {
              "Name": "Terraform2_EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.terraform1_ec2",
            "aws_internet_gateway.Terrafrom_IGW",
            "aws_security_group.terraform_sg",
            "aws_subnet.SubnetA",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform1_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0715c1897453cabd1",
            "arn": "arn:aws:ec2:us-east-1:218600583122:instance/i-0deb68caa7fee3a95",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0deb68caa7fee3a95",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "terrafor-testing",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-011cef548a278c7f0",
            "private_dns": "ip-10-0-0-175.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ceea8b955e4f3775",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a690712bcdb2e260",
            "tags": {
              "Name": "terraform_EC2"
            },
            "tags_all": {
              "Name": "terraform_EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-051209474871f375e"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.Terrafrom_IGW",
            "aws_security_group.terraform_sg",
            "aws_subnet.SubnetA",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0715c1897453cabd1",
            "arn": "arn:aws:ec2:us-east-1:218600583122:instance/i-00fdbf2c69b10937f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00fdbf2c69b10937f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "terrafor-testing",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b12f52b37a7bcaeb",
            "private_dns": "ip-10-0-0-70.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00463645b35aef2f5",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a690712bcdb2e260",
            "tags": {
              "Name": "terraform_EC2"
            },
            "tags_all": {
              "Name": "terraform_EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-051209474871f375e"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.Terrafrom_IGW",
            "aws_security_group.terraform_sg",
            "aws_subnet.SubnetA",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Terrafrom_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218600583122:internet-gateway/igw-0e61ad2c41792e254",
            "id": "igw-0e61ad2c41792e254",
            "owner_id": "218600583122",
            "tags": {
              "Name": "Terraform_IGW"
            },
            "tags_all": {
              "Name": "Terraform_IGW"
            },
            "vpc_id": "vpc-006a0d27a242706b8"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_routeTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218600583122:route-table/rtb-0feff3dd10a376dfc",
            "id": "rtb-0feff3dd10a376dfc",
            "owner_id": "218600583122",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e61ad2c41792e254",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_route"
            },
            "tags_all": {
              "Name": "Terraform_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-006a0d27a242706b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Terrafrom_IGW",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0218b539ed3df8a31",
            "route_table_id": "rtb-0feff3dd10a376dfc",
            "subnet_id": "subnet-0a690712bcdb2e260"
          },
          "dependencies": [
            "aws_internet_gateway.Terrafrom_IGW",
            "aws_route_table.terraform_routeTable",
            "aws_subnet.SubnetA",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218600583122:security-group/sg-051209474871f375e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051209474871f375e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow SSH connection to VM",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http inbound traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow https inbound traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20230601052906384800000001",
            "name_prefix": "terraform-",
            "owner_id": "218600583122",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-006a0d27a242706b8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "SubnetA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218600583122:subnet/subnet-0a690712bcdb2e260",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a690712bcdb2e260",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "218600583122",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Terraform_SubnetA"
            },
            "tags_all": {
              "Name": "Terraform_SubnetA"
            },
            "vpc_id": "vpc-006a0d27a242706b8"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218600583122:vpc/vpc-006a0d27a242706b8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-026dc9168a4828071",
            "default_route_table_id": "rtb-0387dbf13fa4d4378",
            "default_security_group_id": "sg-012f23054208c14d0",
            "dhcp_options_id": "dopt-0f757302c8390fae5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-006a0d27a242706b8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0387dbf13fa4d4378",
            "owner_id": "218600583122",
            "tags": {
              "Name": "Terraform_vpc"
            },
            "tags_all": {
              "Name": "Terraform_vpc"
            }
          }
        }
      ]
    }
  ]
}